Fixes https://github.com/xuren87/node-red-contrib-kafkanode/issues/3

--- a/kafka.html
+++ b/kafka.html
@@ -5,7 +5,7 @@
         defaults: {
             brokerUrl: { value: "", required: true },
             topic: { value: "", required: true },
-            partition: { value: "0", required: true },
+            partition: { value: 0, required: true, validate:RED.validators.number()},
             debug: { value: "" }
         },
         inputs: 1,
@@ -57,7 +57,7 @@
             topic: { value: "", required: true },
             groupId: { value: "", required: true },
             debug: { value: "" },
-            partition: { value: "0", required: true },
+            partition: { value: 0, required: true, validate:RED.validators.number() },
             autoCommit: { value: true, required: true },
             fetchMaxBytes: { value: 1024 * 1024 },
             sessionTimeout: { value: '' },
